tooling/nargo_cli/tests/snapshots/compile_failure/dup_trait_items_5/execute__tests__dup_trait_items_5_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
warning: unused trait MyTrait
  ┌─ src/main.nr:1:7
  │
1 │ trait MyTrait {
  │       ------- unused trait
  │

error: Duplicate definitions of trait associated constant with name MyItem found
  ┌─ src/main.nr:2:6
  │
2 │   fn MyItem();
  │      ------ First trait associated constant found here
3 │   let MyItem: u32;
  │       ------ Second trait associated constant found here
  │

Aborting due to 1 previous error
